[package]
name = "chat-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = { version = "0.4.6", features = ["rand"] }
num-integer = "0.1.46"
num-iter = "0.1.45"
num-traits = "0.2.19"
rand = { version = "0.8", features = ["getrandom"] } 
rand_chacha = "0.3"
tokio = { version = "1.44.2", features = ["full"] }
